# carrier-usdot-verify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: red_flags.md
src/carrier_verify/: __init__.py  cli.py  client.py  models.py  redflags.py  validate.py
tests/: test_redflags.py  test_validate.py
tests/fixtures/: carrier_clean.json  carrier_risky.json
