[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carrier-verify"
version = "0.1.0"
description = "Verify motor carrier identity against public FMCSA data and flag freight-fraud red flags at pickup."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Lingyu Meng" }]
keywords = ["fmcsa", "usdot", "freight-fraud", "cargo-theft", "carrier-vetting", "logistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
carrier-verify = "carrier_verify.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/carrier-verify"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
